[package]
name = "tr4c0m"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.5.7"
reqwest = {default-features = true, features = ["json", "blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# space-traders = "0.1.1"
#space-traders = {git = "https://gitlab.com/mkalte/space-traders-rust.git"}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
