[package]
name = "tr4c0m"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
#poise = "0.6.1-rc1"
serenity = "0.12.0"
reqwest = {default-features = true, features = ["json", "blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6.1", features = ["v4"] }
